mejoramos seccion de contacto

--- a/index.html
+++ b/index.html
@@ -113,19 +113,20 @@
         </h2>
        <div class="container">
         <form class="row">
-            <div class="mb-3 col-8">
+            <div class="mb-3 col-4">
                     <label class="mb-2 text-white" for="Nombre" class="form-label">Nombres</label>
                     <input type="text" class="form-control" id="Nombre" aria-describedby="nombre">
                 <div id="nombre" class="form-text text-light">Ingrese su nombre completo.</div>
               </div>
-            <div class="mb-3 col-8">
+            <div class="mb-3 col-4">
                 <label class="mb-2 text-white" for="exampleInputEmail1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text text-light">Ingrese su correo electrónico</div>
+              <div id="emailHelp" class="form-text text-light">Ingrese su correo electrónico.</div>
             </div>
-            <div class="mb-3 col-6">
+            <div class="mb-3 col-4">
                 <label class="mb-2 text-white" for="Asunto" class="form-label">Asunto</label>
                 <input type="text" class="form-control" id="asunto" aria-describedby="asunto">
+                <div id="asunto" class="form-text text-light">Ingrese el asunto del mensaje.</div>
             </div>
            <div class="mb-4 col-12">
                 <label class="mb-2 text-white" for="Mensaje">Mensaje</label>
